--- a/style.css
+++ b/style.css
@@ -58,16 +58,26 @@ button {
 
 dialog {
     position: relative;
-    top: 150px;
+    top: 120px;
     left: 275px;
     width: 800px;
-    border: 2px solid blue;
+    background-color: transparent;
+    border: none;
 }
 
 form {
     font-size: 24px;
     padding: 20px 40px 20px 40px; 
     color: blue;
+    background-color: antiquewhite;
+    border: 2px solid blue;
+}
+
+#close {
+    background-color: red;
+    padding: 10px;
+    position: relative;
+    top: 20px;
 }
 
 fieldset {
