--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ form > input {
     outline: none;
     border: 2px solid grey;
     margin-bottom: 15px;
-
 }
 
 #bookForm {
@@ -99,20 +98,6 @@ h3 {
     font-weight: 600;
 }
 
-legend {
-    margin-bottom: 8px;
-}
-
-input[type="radio"] {
-    margin-right: 15px;
-    margin-bottom: 15px;
-    transform: scale(1.3);
-}
-
-#radioBox {
-    font-size: 18px;
-}
-
 #close {
     position: fixed;
     top: 80px;
@@ -124,6 +109,11 @@ input[type="radio"] {
     border: 2px solid black;
     font-size: 18px;
     border-radius: 5px;
+}
+
+#readBox {
+    display: flex;
+    gap: 20px;
 }
 
 #submit {
